--- a/punchclock/src/main/resources/application.properties
+++ b/punchclock/src/main/resources/application.properties
@@ -3,7 +3,7 @@ quarkus.datasource.username=${POSTGRES_USER:postgres}
 quarkus.datasource.password=${POSTGRES_PASSWORD:postgres}
 quarkus.datasource.jdbc.url=jdbc:postgresql://${POSTGRES_HOSTNAME:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:postgres}
 
-quarkus.hibernate-orm.schema-management.strategy=update
+quarkus.hibernate-orm.schema-management.strategy=create-drop
 
 quarkus.smallrye-openapi.info-title=Punchclock API
 quarkus.smallrye-openapi.info-version=1.0.0
