--- a/chopify/src/main/resources/application.properties
+++ b/chopify/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=${POSTGRES_USER:postgres}
 quarkus.datasource.password=${POSTGRES_PASSWORD:postgres}
-quarkus.datasource.jdbc.url=jdbc:postgresql://${POSTGRES_HOSTNAME:localhost}:${POSTGRES_PORT:5433}/${POSTGRES_DB:postgres}
+quarkus.datasource.jdbc.url=jdbc:postgresql://${POSTGRES_HOSTNAME:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:postgres}
 
 quarkus.hibernate-orm.schema-management.strategy=create-drop
 
-quarkus.smallrye-openapi.info-title=Punchclock API
+quarkus.smallrye-openapi.info-title=Chopify API
 quarkus.smallrye-openapi.info-version=1.0.0
-quarkus.smallrye-openapi.info-description=Dokumentation der Schnittstelle des Übungsprojekts Punchclock
+quarkus.smallrye-openapi.info-description=Dokumentation der Chopify API
 
 quarkus.http.cors.enabled=true
