feat punchclock: configure jwt

--- a/chopify/src/main/resources/application.properties
+++ b/chopify/src/main/resources/application.properties
@@ -10,3 +10,11 @@ quarkus.smallrye-openapi.info-version=1.0.0
 quarkus.smallrye-openapi.info-description=Dokumentation der Chopify API
 
 quarkus.http.cors.enabled=true
+
+mp.jwt.verify.publickey.location=publicKey.pem
+mp.jwt.verify.issuer=https://example.com/issuer
+mp.jwt.token.header=Authorization
+mp.jwt.token.signed=true
+
+smallrye.jwt.sign.key.location=privateKey.pem
+quarkus.smallrye-jwt.enabled=true
