--- a/punchclock/src/main/resources/application.properties
+++ b/punchclock/src/main/resources/application.properties
@@ -18,3 +18,10 @@ mp.jwt.token.signed=true
 
 smallrye.jwt.sign.key.location=privateKey.pem
 quarkus.smallrye-jwt.enabled=true
+
+quarkus.swagger-ui.always-include=true
+quarkus.swagger-ui.oauth2-redirect-url=/q/oauth2-redirect.html
+mp.openapi.extensions.smallrye.security-scheme.name=BearerAuth
+mp.openapi.extensions.smallrye.security-scheme.type=HTTP
+mp.openapi.extensions.smallrye.security-scheme.scheme=bearer
+mp.openapi.extensions.smallrye.security-scheme.bearer-format=JWT
